apps/sitio-production/sitio-dashboard/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitio-dashboard-nginx
  namespace: sitio-production
  labels:
    app: sitio-dashboard-nginx
    environment: sitio-production
spec:
  type: ClusterIP
  selector:
    app: sitio-dashboard-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
