apps/sitio-production/sitio-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitio-dashboard
  namespace: sitio-production
  labels:
    app: sitio-dashboard
spec:
  type: ClusterIP
  selector:
    app: sitio-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
